Fixed font-sizes and spacing at mobile breakpoints

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -97,10 +97,6 @@ button:hover {
   background-color: rgba(0, 21, 36, .9)
 }
 
-.update-btn {
-  margin: 0 0 0 5.5rem;
-}
-
 .delete-btn {
   margin: 0 0 0 1rem;
 }
@@ -218,24 +214,29 @@ input {
 
 @media (max-width: 680px) {
   body {
-    padding: .5rem .8rem;
+    margin: 20px;
   }
 
   .text {
-    margin: 0 0 0 1.5rem;
-    font-size: 1.5rem;
-  }
-
-  .update-btn {
-    margin: 0 0 0 1.75rem;
-  }
-
-  .delete-btn {
-    margin: 0 0 0 .75rem;
+    margin: 0 0 0 20px;
+    font-size: 2.5rem;
   }
 
   .numbertext {
-    font-size: 1rem;
+    font-size: 2.5rem;
+  }
+
+  .btn-container {
+    margin-top:10px;
+    margin-left: 25px;
+    text-align: left;
+  }
+
+  .numbertext {
+    font-size: 2.5rem;
+  }
+  .form {
+    padding: 20px 40px;
   }
 }
 
